replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/10_unsafe_cast_missing_type.su
// Expected error: AKA0105 - unsafeCast requires a type argument.

function fuzzy Bad(vector v) {
    return unsafeCast(v);
}
